# AITF_ASSIGNMENT

./: .gitignore  .replit  README.md  check_gemini_models.py  db.sqlite3  package-lock.json  package.json  pyproject.toml  vite.config.js
api/: auth_views.py  models.py  serializers.py  services.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
src/: App.jsx
src/components/: Navbar.jsx  ProtectedRoute.jsx
src/context/: AuthContext.jsx
src/pages/: Dashboard.jsx  Login.jsx  Profile.jsx  Register.jsx
